--- a/Bootstrap4/conFusion/package.json
+++ b/Bootstrap4/conFusion/package.json
@@ -8,13 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lite": "lite-server",
     "scss": "node-sass -o css/ css/",
-    "compile:scss": "node-sass sass/style.scss css/style.css"
+    "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
+    "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "node-sass": "^9.0.0"
+    "node-sass": "^9.0.0",
+    "onchange": "^3.3.0",
+    "parallelshell": "^3.0.2"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
